--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+<img src="underconstruction.gif" alt="This website's under construction" width="1100" height="800">
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
 <h2>Project 1) Analog Modular synth</h2>
