--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 <img src="underconstruction.gif" alt="This website's under construction" width="1100" height="800">
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
-<h1> Test Test please work</h1>
+<h2>Project 1) Building an Electric Bass</h2>
+<p1>	After being a guitarist for 3 years, I'd decided that I wanted to try my hands at building a guitar. I also wanted to pick up bass as my second instrument, 
+so I figured that it would be a great idea to combine those two ideas together and build my own bass!
+</p1>
 
-<h2>Project 1) Analog Modular synth</h2>
+<h2>Project 2) Analog Modular synth</h2>
 <p1> 
 	I wanted a modular synth, and I wanted an electronics project to keep my skills sharp.
  So I started looking into different schematics to build and found this wonderful youtube series by <a href="https://www.youtube.com/@MoritzKlein0?app=desktop">Moritz Klein</a>.
  I've taken his schematics and lightly adjusted them to add some extra goodies. 
 </p1>
 
-<h2>Project 2) Building an Electric Bass</h2>
-<p1>	This project was mostly just to cut my teeth on making instruments, and I viewed it more as an art project an an engineering one.
- I'd already gotten comfortable with making things with sheet metal but hadn't done much with wood.
- I also wanted to learn how to play bass because at this point I'd been playing guitar for about 3 years; So I went ahead and bought a kit.
- 
-</p1>
+
 
 
 </body>
