adding image in line

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
 <h2>Project 1) Building an Electric Bass</h2>
-<p1>	After being a guitarist for 3 years, I'd decided that I wanted to try my hands at building a guitar. I also wanted to pick up bass as my second instrument, 
-so I figured that it would be a great idea to combine those two ideas together and build my own bass!
+<p1>
+	After being a guitarist for 3 years, I'd decided that I wanted to try my hands at building a guitar.
+ I also wanted to pick up bass as my second instrument, so I figured that it would be a great idea to combine those two ideas together and build my own bass!
+ I bought a bass kit on amazon which included the body, neck, and all neccesary hardware for me to make a bass.
+ <img src="20210829_192011.jpg" alt="All of the components laid out" style="width:400px;height:300px;">
 </p1>
 
 <h2>Project 2) Analog Modular synth</h2>
