trying images infile

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
  I bought a bass kit on amazon which included the body, neck, and all neccesary hardware for me to make a bass.
  This was both the cheapest way for me to get a bass and allowed me to practice soldering, setting up instruments, and make a cool art project.
  <br>
- <img src="20210829_192011.jpg" alt="All of the components laid out" style="width:800px;height:600px;">
+ <img src="Bass_Photos/20210829_192011.jpg" alt="All of the components laid out" style="width:800px;height:600px;">
  <br>
  After checking that all of the pieces were in the kit I put all of the pieces on in a test fit to make sure I wouldn't have to shave off any pieces of wood or pickguard.
  <br>
- <img src="20210829_194403.jpg" alt="Neck on guitar and pickguard fitting" style="width:800px;height:600px;">
+ <img src="Bass_Photos/20210829_194403.jpg" alt="Neck on guitar and pickguard fitting" style="width:800px;height:600px;">
  <br>
  Once the neck was put on, I took a straight edge to either side of the neck and drew lines to make sure that the bridge would be alligned and that the strings would sit in the middle of the fretboard.
  I also measured 17 inches from the 12th fret and made sure that the middle of the bridge laid at that point.
  The reasoning behind this is that the strings on a jazz bass should be about 34 inches long, and the 12th fret should be exactly in the middle.
  <br>
- <img src="20210829_195557.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
+ <img src="Bass_Photos/20210829_195557.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
  <br>
  The strings never actually end up being 34 inches long, since the variance in tension and thickness require the lower frequency strings to be longer than the higher frequency strings.
  After all of that, I took the bass back apart to paint it and seal it so that it looked better than plain wood and protected it from the elements.
  Once I got it all back together I resoldered the potentiometers so that it would have a master volume, master tone and blend knob, as opposed to standard jazz bass wiring which is neck volume, bridge volume, and tone.
  <br>
- <img src="20210906_171323.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
+ <img src="Bass_Photos/20210906_171323.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
  <br>
  The above image shows the wiring before I switched it around.
  Once it was finally done I had a bass That i could play and learn on. 
  It ended up being my main bass for the next several years and I've played over a dozen shows with it.
  <br>
- <img src="20210906_171323.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
+ <img src="Bass_Photos/20210906_171323.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
  <br>
  
 </p1>
