adding more pics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
 <h2>Project 1) Building an Electric Bass</h2>
-<p1>
+<p>
 	After being a guitarist for 3 years, I'd decided that I wanted to try my hands at building a guitar.
  I also wanted to pick up bass as my second instrument, so I figured that it would be a great idea to combine those two ideas together and build my own bass!
  I bought a bass kit on amazon which included the body, neck, and all neccesary hardware for me to make a bass.
@@ -31,23 +31,29 @@
  After all of that, I took the bass back apart to paint it and seal it so that it looked better than plain wood and protected it from the elements.
  Once I got it all back together I resoldered the potentiometers so that it would have a master volume, master tone and blend knob, as opposed to standard jazz bass wiring which is neck volume, bridge volume, and tone.
  <br>
- <img src="Bass_Photos/20210906_171323.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
+ <img src="Bass_Photos/20210906_171323.jpg" alt="Wiring pre switch" style="width:600px;height:800px;">
  <br>
  The above image shows the wiring before I switched it around.
  Once it was finally done I had a bass That i could play and learn on. 
  It ended up being my main bass for the next several years and I've played over a dozen shows with it.
  <br>
- <img src="Bass_Photos/20210906_171323.jpg" alt="Bridge allignment" style="width:600px;height:800px;">
+ <img src="Bass_Photos/20210906_174930.jpg" alt="Bass next to other guitars" style="width:600px;height:800px;">
  <br>
  
-</p1>
+</p>
 
-<h2>Project 2) Analog Modular synth</h2>
-<p1> 
+<h2>Project 2) Homemade speakers</h2>
+<p>
+	During college I'd learned about <a href="https://www.daytonaudio.com/topic/excitersbuyerguide">exciters</a> which allow you to turn any surface into a speaker.
+ So I went into a bit of youtube binging streak as I am often want to do.
+</p>
+
+<h2>Project 3) Analog Modular synth</h2>
+<p> 
 	I wanted a modular synth, and I wanted an electronics project to keep my skills sharp.
  So I started looking into different schematics to build and found this wonderful youtube series by <a href="https://www.youtube.com/@MoritzKlein0?app=desktop">Moritz Klein</a>.
  I've taken his schematics and lightly adjusted them to add some extra goodies. 
-</p1>
+</p>
 
 
 
