--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
 <h2>Project 1) Building an Electric Bass</h2>
+<h4>October 2021</h4>
 <p>
 	After being a guitarist for 3 years, I'd decided that I wanted to try my hands at building a guitar.
  I also wanted to pick up bass as my second instrument, so I figured that it would be a great idea to combine those two ideas together and build my own bass!
@@ -43,9 +44,29 @@
 </p>
 
 <h2>Project 2) Homemade speakers</h2>
+<h4>September 2022</h4>
 <p>
 	During college I'd learned about <a href="https://www.daytonaudio.com/topic/excitersbuyerguide">exciters</a> which allow you to turn any surface into a speaker.
  So I went into a bit of youtube binging streak as I am often want to do.
+ After hearing a few audio samples I'd decided that I liked the sound of pink panther foam insulation the best.
+ Larger panels sound better, but there was going to be the issue of getting them from home depot to my house, so I ended up going with smaller panels that wouldn't get as bassy as the larger panels.
+ Since I was already making audio sacrifices from size, I figured I may as well paint the panel and turn it into something interesting to look at, so I cut it into a heart shape and emphasized the shape with some cute paint.
+ I wanted to suspend the panel to reduce the amount of points of contact that would dampen the high frequency content of the speaker, and so I built a quick stand out of wood and used some old mardi gras beads to hang it from.
+ The exciter was attached a bit off center of the panel and the whole assembly was put in my living room.
+ <br>
+ <img src="Speakers/20220922_191848.jpg" alt="Speaker in living room" style="width:800px;height:600px;">
+ <img src="Speakers/20221013_204350.jpg" alt="exciter on the back of the panel" style="width:600px;height:800px;">
+ <br>
+ At this point I had the main speakers built and hooked up to a cheap amp, but I was missing anything below about 100hz and needed a subwoofer.
+ I looked around my apartment to see if I had any hard, light materials lying around, and to my suprise I found a hex centered cardboard from my TV.
+ I repeaeted the above proces and tried it out and... it worked, but if I turned it up too loud then I got some weird resonances that I have to assume was from some paper coming unglued inside the comb.4
+ Not great, but it was a start. Once I put it in the center of my living room, I got a bit of a suprise.
+ Because the cardboard was resting against a non-functioning fireplace, that cavity was acting as an amplifier, making the speaker louder at lower input levels.
+ Finally I could get rid of the weird resonances while keeping the low frequencies at a decent volume.
+ <br>
+ <img src="Speakers/20221013_203740.jpg" alt="full speaker setup in living room" stlye="width:600px;height:800px;">
+ <br>
+ 
 </p>
 
 <h2>Project 3) Analog Modular synth</h2>
