--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <img src="underconstruction.gif" alt="This website's under construction" width="1100" height="800">
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
+<div>
 <h2>Project 1) Building an Electric Bass</h2>
 <h4>October 2021</h4>
 <p>
@@ -39,10 +40,11 @@
  It ended up being my main bass for the next several years and I've played over a dozen shows with it.
  <br>
  <img src="Bass_Photos/20210906_174930.jpg" alt="Bass next to other guitars" style="width:600px;height:800px;">
- <br>
- 
-</p>
 
+</p>
+ </div>
+
+<div>
 <h2>Project 2) Homemade speakers</h2>
 <h4>September 2022</h4>
 <p>
@@ -68,14 +70,16 @@
  <br>
  
 </p>
+</div>
 
+<div>
 <h2>Project 3) Analog Modular synth</h2>
 <p> 
 	I wanted a modular synth, and I wanted an electronics project to keep my skills sharp.
  So I started looking into different schematics to build and found this wonderful youtube series by <a href="https://www.youtube.com/@MoritzKlein0?app=desktop">Moritz Klein</a>.
  I've taken his schematics and lightly adjusted them to add some extra goodies. 
 </p>
-
+</div>
 
 
 
