--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="underconstruction.gif" alt="This website's under construction" width="1100" height="800">
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
-<div>
+<div style="background-color:#FFF4A3;">
 <h2>Project 1) Building an Electric Bass</h2>
 <h4>October 2021</h4>
 <p>
@@ -44,7 +44,7 @@
 </p>
  </div>
 
-<div>
+<div style="background-color:#FFA4F3;">
 <h2>Project 2) Homemade speakers</h2>
 <h4>September 2022</h4>
 <p>
@@ -72,7 +72,7 @@
 </p>
 </div>
 
-<div>
+<div style="background-color:#AFF4F3;">
 <h2>Project 3) Analog Modular synth</h2>
 <p> 
 	I wanted a modular synth, and I wanted an electronics project to keep my skills sharp.
