--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="underconstruction.gif" alt="This website's under construction" width="1100" height="800">
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
-<div style="background-color:#FFF4A3;">
+<div style="background-color:#FFF4A3;margin:20px;">
 <h2>Project 1) Building an Electric Bass</h2>
 <h4>October 2021</h4>
 <p>
