--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en-US">
 <head>
 <title>Jrew's Website!</title>
+<style>
+.project {
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+</style>
 </head>
 
 <body>
 <img src="underconstruction.gif" alt="This website's under construction" width="1100" height="800">
 <h1 title="It's where I put the fun things I do!">Jrew's Projects</h1>
 
-<div style="background-color:#FFF4A3;margin:20px;">
+<div class="project" style="background-color:#FFF4A3;">
 <h2>Project 1) Building an Electric Bass</h2>
 <h4>October 2021</h4>
 <p>
@@ -44,7 +51,7 @@
 </p>
  </div>
 
-<div style="background-color:#FFA4F3;">
+<div class="project" style="background-color:#FFA4F3;">
 <h2>Project 2) Homemade speakers</h2>
 <h4>September 2022</h4>
 <p>
@@ -72,7 +79,7 @@
 </p>
 </div>
 
-<div style="background-color:#AFF4F3;">
+<div class="project" style="background-color:#AFF4F3;">
 <h2>Project 3) Analog Modular synth</h2>
 <p> 
 	I wanted a modular synth, and I wanted an electronics project to keep my skills sharp.
